
classDiagram
    class User {
        -id: int
        -username: str
        -email: str
        +__init__(username: str, email: str)
        +get_tickets() list
    }
    class Ticket {
        -id: int
        -title: str
        -description: str
        -status: str
        -user_id: int
        +__init__(title: str, description: str, user_id: int)
        +update_status(status: str)
        +get_messages() list
    }
    class Message {
        -id: int
        -content: str
        -ticket_id: int
        -user_id: int
        +__init__(content: str, ticket_id: int, user_id: int)
    }
    class HelpdeskStaff {
        -id: int
        -username: str
        -email: str
        +__init__(username: str, email: str)
        +get_tickets() list
        +assign_ticket(ticket_id: int, staff_id: int)
    }
    class Database {
        +create_table(table_name: str)
        +insert_data(table_name: str, data: dict)
        +query_data(table_name: str, query: str) list
    }
    User --> Ticket
    Ticket --> Message
    HelpdeskStaff --> Ticket
    Database --> User
    Database --> Ticket
    Database --> Message
